@@ -1,9 +1,12 @@
 <pre>
 date:
 	* version 0.4
+	* extension GUID was changed to 'vimperator@mozdev.net' -> YOU WILL HAVE
+	  TO UNINSTALL ANY OLD VIMPERATOR INSTALLATION BEFORE INSTALLING THIS VERSION
 	* support for 'wildmode' completion setting
 	* changed regexp search to normal text search for completion -> massive speedup, but limited functionality
 	* support for :open ./ , :open .. and :open ... (patch from Lee Hinman)
+	  'gu' and <BackSpace> goes up a directory component, gU and <C-BackSpace> to the root directory 
 	* Esc now doesn't stop loading the webpage, use Ctrl-c instead, :stop command added
 	* changed hinttags to work with dict.leo.org and hintstyle to work with digg.com
 	* :back! goes to beginning of history now
@@ -13,6 +16,7 @@ date:
 	  (patch from Viktor Kojouharov)
 	* :source support, and auto-sourcing ~/.vimperatorrc on startup
 	* :javascript <<EOF support to execute multiline javascript code
+	  also changed :exec to behave more vim like
 	* fixed saving of session
 	* fixed hints display when zooming in/out of a web page
 	* added 'B' command for continous buffer display
@@ -27,6 +31,7 @@ date:
 	* Support for space/shift-space/alt-left/alt-right keys without beeping
 	* :open without argument reloads current page, :tabopen opens an empty tab
 	* added 'n' and 'N' to repeat a search
+	* many small bug fixes
 
 17/04/2007:
 	* version 0.3
